<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="click"
            type="android.view.View.OnClickListener"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user_main_login_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/log_in_email_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/log_in_email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/log_in_password_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/log_in_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <com.cchao.simplelib.view.StateTextView
                android:id="@+id/login"
                style="@style/ApplyAccent"
                android:layout_marginTop="32dp"
                android:onClick="@{click::onClick}"
                android:text="@string/log_in"
                android:textSize="@dimen/sp_16"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{click::onClick}"
                    android:padding="@dimen/dp_8"
                    android:text="@string/to_sign_up"/>

                <TextView
                    android:id="@+id/forgot_your_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="@{click::onClick}"
                    android:padding="@dimen/dp_8"
                    android:text="@string/forgot_your_password"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>