<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="click"
            type="android.view.View.OnClickListener"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"/>
        </android.support.design.widget.TextInputLayout>


        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="top"
            android:hint="@string/feed_back_hint"
            android:lines="4"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/font_family_medium"
                android:onClick="@{click::onClick}"
                android:padding="@dimen/dp_16"
                android:text="@string/submit"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/sp_16"/>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>
    </LinearLayout>
</layout>