<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.cchao.insomnia.model.javabean.user.UserBean"/>

        <variable
            name="click"
            type="android.view.View.OnClickListener"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginBottom="@dimen/dp_40">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/dp_80"
                    android:layout_centerInParent="true"
                    android:onClick="@{click::onClick}"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/avatar"
                    android:layout_alignBottom="@+id/avatar"
                    app:srcCompat="@drawable/user_info_take_photo"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/user_info_name"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:text="@{user.nickName}"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/user_info_gender"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16">

                    <CheckBox
                        android:id="@+id/check_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{user.gender==1}"
                        android:text="@string/man"/>

                    <CheckBox
                        android:id="@+id/check_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_16"
                        android:checked="@{user.gender==0}"
                        android:text="@string/woman"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/user_info_gender"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/age"
                        android:text="@{String.valueOf(user.age)}"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"

                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/user_info_email"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16">

                    <android.support.v7.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_email"
                        android:text="@{user.email}"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"

                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/user_info_pwd"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_pwd"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <com.cchao.simplelib.view.StateTextView
                android:id="@+id/to_login_in"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_32"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_50"
                android:onClick="@{click::onClick}"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                android:text="@string/want_to_login"
                android:textColor="@color/white"
                app:normalBackgroundColor="@color/colorAction"
                app:radius="@dimen/dp_16"/>

        </LinearLayout>
    </ScrollView>
</layout>